# CyberSurX

./: CHANGELOG.md  CLI_README.md  DEVICES.md  README.md  config.yaml.example  cybersurx.db  demo.sh  live_demo.py  ollama_demo.py  pyproject.toml  quick_test.py  requirements.txt  requirements_dev.txt  setup.py  test_yazilim.py
.github/workflows/: ci-cd.yml  test.yml
src/: __main__.py  cli.py  init_db.py  redteam_master.py
src/api/: dependencies.py  main.py
src/api/routes/: auth.py  devices.py  injection.py  ollama.py  reports.py  scans.py  targets.py  vulnerabilities.py
src/core/: README_HITL.md  __init__.py  auth_utils.py  hitl.py  hitl_config.py  llm_client.py
src/core/config/: settings.py
src/core/tests/: test_hitl.py
src/database/: __init__.py  connection.py  models.py
src/devices/: README-devices.md  ai-orchestrator.py  flipper-zero-setup.sh  pentest-cli.sh  pentest-pipeline.sh  setup-flipper.sh  setup-sharktap.sh  sharktap-setup.sh  wifi-pineapple-setup.sh
src/injection/: README.md  __init__.py  injection-rapor.json  main.py
src/injection/attacks/: __init__.py  attack_engine.py  judge.py
src/injection/config/: ollama_models.yaml
src/injection/core/: models.py  orchestrator.py  router.py  skill_runner.py
src/injection/data/: owasp_asi.json
src/injection/reports/: owasp_classifier.py  reporter.py
src/injection/scanners/: __init__.py  base_scanner.py  data_leakage_scanner.py  indirect_injection_scanner.py  tool_abuse_scanner.py  web_vuln_scanner.py
src/injection/utils/: attack_engine.py  dialogue.py  (+2 more)
src/integrations/: ollama_client.py
src/redteam/: __init__.py  redteam.py
tests/: minimal_integration.py  test_api_endpoints.py  test_authentication.py  test_database_models.py  test_exploit_executor.py  test_nmap_scanner.py  test_real_integration.py  test_web_vuln_scanner.py
tests/api/: test_endpoints.py
tests/cli/: test_commands.py
tests/database/: test_models.py
tests/e2e/: test_cli_e2e.py
tests/integration/: test_full.py  test_integration.py
tests/unit/: test_core.py
(+44 files in other folders)
